# money_manager

./: .aiexclude  .gitignore  opencode.json  process_statements.sh  pyproject.toml  requirements.txt  run.bat  run.sh  scraper.js
.zed/: debug.json
Tampermonkey/: scraper.js
configs/: accounts.json  accounts.json.example  configs.json  transaction_structure.json
money_manager/: existing_transactions.py  input_transactions.py  main.py  processor.py
money_manager/models/: statement.py
money_manager/settings/: accounts.py  settings.py  transactions.py
money_manager/transformers/: bac.py  ficohsa.py  revolut.py  santander.py
money_manager/utils/: dataframe_hasher.py  exceptions.py  merger.py  pandas_utils.py  utils.py
python/data_processing/: data_processing.py
secrets/: exchange_rate_api.json
src/python/: bac_transformer.py  dataframe_hasher.py  duplicate_remover.py  exceptions.py  exchange_rate.py  existing_transactions.py  file_processor.py  input_transactions.py  main.py  pandas_utils.py  processor.py  santander_transformer.py  transformations_bac.py  transformer_bac.py  transformer_revolut.py  transformer_santander.py  utils.py
